--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
+    "konva": "^7.1.4",
     "nuxt": "^2.14.6",
-    "nuxt-buefy": "^0.4.3"
+    "nuxt-buefy": "^0.4.3",
+    "vue-konva": "^2.1.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
